Fix duplicidade de endpoints swagger, retorno de cursos